[CDAP-17627] Fix alignment of configuration Resources tab, esp. for real time * Narrow control width to match internal input width * Fix margin to align CPU and Memory inputs

--- a/cdap-ui/app/directives/my-pipeline-configurations/my-pipeline-configurations.less
+++ b/cdap-ui/app/directives/my-pipeline-configurations/my-pipeline-configurations.less
@@ -71,8 +71,8 @@ my-batch-pipeline-config,
 my-realtime-pipeline-config,
 my-sql-pipeline-config {
   my-number-widget {
-    margin: 0 5px;
-    width: 80px;
+    margin-right: 5px;
+    width: 60px;
   }
   .pipeline-configurations-content .configuration-content {
     .configuration-content-container {
